--- a/main.tex
+++ b/main.tex
@@ -2,12 +2,14 @@
 
 \usepackage{amsmath}		                      %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
+\usepackage{colonequals}                          %Vertikal zentrierter Doppelpunkt
 \usepackage{mathrsfs}
 \usepackage{amsfonts}
 \usepackage[T1]{fontenc}
 \usepackage[margin=2cm]{geometry}	              %Seitenrand
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einfügen
+\usepackage{wrapfig}                              %Text um Graphiken "wickeln" (wrap)
 \usepackage[listings,skins,breakable]{tcolorbox}
 \usepackage{tikz,pgf,pgfplots}                    %Grafiken zeichnen
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
