Bei mir sieht alles komisch aus :((

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[11p,a4paper,fleqn]{report}
 
-\usepackage{amsmath}		                      %Matheschreibweise...
+\usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
 \usepackage{colonequals}                          %Vertikal zentrierter Doppelpunkt
 \usepackage{mathrsfs}
@@ -30,10 +30,10 @@
 \usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
 \usepackage{scalerel}
 \usepackage{xcolor}
-\usepackage{epigraph}
+\usepackage{epigraph}                             %FÜrs Titelblatt
 \usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 
-% \pgfplotsset{compat=1.15}
+%\pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
 
 
@@ -46,8 +46,6 @@
 \fancyhead[L]{\nouppercase{\leftmark}}
 \fancyhead[R]{Skript SMP}
 \fancyfoot[C]{\thepage}
-\parindent 0ex
-
 
 
 
