--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -1,14 +1,18 @@
 \chapter{Integrale}
-\section{Einführung}
-Der Hauptunterschied zwischen einem bestimmten und einem unbestimmten Integral ist die Existenz (bestimmtes Integral) bzw. das Fehlen
-(unbestimmtes Integral) der Integrationsgrenzen.\\
-Bei einem bestimmten Integral ist die Lösung ein Flächeinhalt, also ein einfacher Zahlenwert.\\
-Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine sogenannte Stammfunktion.\\
+\section{Einführung - Stammfunktionen}
+\begin{Definition}
+  Sei $f$ eine Funktion, die über einem Intervall $I\in\R$ definiert ist. Man nennt jede Funktion $F$, die auf $I$ differenzierbar ist, für die gilt $F'(x)=f(x)$ ,$\forall x\in I$ eine \emph{Stammfunktion} von $f$.
+\end{Definition}
+\begin{Theorem}
+  Jede auf $I$ stetige Funktion besitzt eine Stammfunktion über $I$.
+\end{Theorem}
 
 
 \section{Bestimmte Integrale}
 \begin{Definition}
-  Wenn Integrationsgrenzen angegeben werden, handelt es sich um ein bestimmtes Integral:
+  Sei $f$ eine auf einem Intervall $I$ stetige Funktion und zwei reelle Zahlen $a,b\in\I$. Die reelle Zahl,
+  dargestellt durch  $\displaystyle{\int_a^b f(t)dt}$ und gegeben durch $F(b)-F(a)$, mit $F$ als beliebige Stammfunktion von $f$, wird bestimmtes Integral von $a$ bis $b$ von $f$ genannt.
+  Eine weitere Darstellungsmöglichkeit des bestimmten Integrals sieht folgendermaßen aus:
   \begin{align*}
     \int_{a}^{b} f(x)dx & = \lim\limits_{n \rightarrow \infty} U_n = \lim\limits_{n \rightarrow \infty} s_n\\
                         & = \lim\limits_{n \rightarrow \infty} O_n = \lim\limits_{n \rightarrow \infty} S_n\\
@@ -16,7 +20,13 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   \end{align*}
   $S_n$ und $O_n$ bezeichnen die Obersumme, wohingegen $s_n$ und $U_n$ die Untersumme bezeichnen.
 \end{Definition}
-
+\begin{Bemerkung}
+  Der Hauptunterschied zwischen einem bestimmten und einem unbestimmten Integral ist die Existenz (bestimmtes Integral) bzw. das Fehlen
+  (unbestimmtes Integral) der Integrationsgrenzen.\\
+  Bei einem bestimmten Integral ist die Lösung ein Flächeinhalt, also ein einfacher Zahlenwert.\\
+  Bei einem unbestimmten Integral erhält man als Lösung eine (wie soeben eingeführte) Stammfunktion.\\
+  Werden feste Integrationsgrenzen angegeben, handelt es sich um ein bestimmtes Integral.
+\end{Bemerkung}
 \definecolor{lightblu}{rgb}{0,0,0.3}
 \definecolor{lightre}{rgb}{0.3,0,0}
 \begin{tikzpicture}[scale=0.7]
@@ -59,11 +69,12 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 \end{tikzpicture}
 
 \begin{Bemerkung}
-  $a$ und $b$ bezeichnen jeweils die untere und obere Grenze des zu berechnenden Integrals. Sie bezeichnen anschaulich die $x$-Werte, zwischen denen die Fläche berechnet wird.
+  $a$ und $b$ bezeichnen jeweils die untere und obere Grenze des zu berechnenden Integrals. Sie bezeichnen anschaulich die $x$-Werte, zwischen denen die Fläche berechnet wird. Tatsächlich ist die geometrische Interpretation von $\displaystyle{\int_a^b f(t)dt}$ die Fläche zwischen dem Schaubild der Funktion und der $x_1$-Achse, die durch die Geraden $x=a$ und $x=b$ begrenzt wird.
 \end{Bemerkung}
-\begin{Bemerkung}
-  Im allgemeinen Fall muss der Integrand $f(x)$ im Intervall $[a;b]$ stetig sein, damit das Integral bestimmt ist.
-\end{Bemerkung}
+
+\begin{Theorem}
+  Für eine auf einem Intervall $I$ stetige Funktion $f$ und einer reellen Zahl $a\in I$ gilt: Die Funktion, die über $I$ definiert ist durch $x\mapsto\displaystyle{\int_a^xf(t)dt}$, ist die Stammfunktion von $f$, die bei $a$ gleich $0$ ist.
+\end{Theorem}
 
 \section{Stammfunktionen und der Hauptsatz der Differential- und Integralrechnung}
 \begin{Definition}
@@ -97,7 +108,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   \begin{tabular}{r c l l}
     \( \displaystyle\int_a^b f(x)dx\) & $=$ &  -\( \displaystyle\int_b^a f(x)dx\) & Invertieren der Intergrationsgrenzen \\
     \( \displaystyle\int_a^b (f(x)+g(x))dx \) & $=$ &  \( \displaystyle\int_a^b f(x)dx + \int_a^b g(x)dx\) & Summenregel\\
-    \( \displaystyle\int_a^b r*f(x)dx\)  & $=$ &  r*\( \displaystyle\int_a^b f(x)dx\) & Linearität\\
+    \( \displaystyle\int_a^b r*f(x)dx\)  & $=$ &  \( \displaystyle r*\int_a^b f(x)dx\) & Linearität\\
     \( \displaystyle\int_a^b f(x)dx +\int_b^c f(x)dx\)  & $=$ &  \( \displaystyle\int_a^c f(x)dx\) & Abschnittweise Integration
 \end{tabular}
 
@@ -170,7 +181,7 @@ Außerdem:
   Für eine auf $[a;b]$ stetige Funktion $f$ mit $a \neq b$ gilt: Der Mittelwert von $f$ auf $[a;b]$ ist gegeben durch $$\mu = \dfrac{1}{b-a} \int_a^b f(t)dt$$
 \end{Definition}
 
-\subsection{Integrationsregeln}
+\subsection{Integrationsregeln und -techniken}
 
 \subsubsection{Partielle Integration}
 \begin{Theorem}
@@ -197,111 +208,13 @@ Nachweisen u, v diffbar und u', v' stetig (kommt noch in sauber)\\
 \end{Beispiel}
 
 \subsubsection{Partialbruchzerlegung}
-Die Partialbruchzerlegung ist ein allgemeines Verfahren zur Integration
-gebrochen rationaler Funktionen. Es sei gegeben:
-\begin{equation}
-  \label{eq:68}
-  f(x)=\frac{P(x)}{Q(x)}
-  =\frac{a_0+a_1x+\dots+a_nx^n}{b_0+b_1x+\dots+b_mx^m}
-\end{equation}
-Im Falle $m\le n$ führt man zuerst eine Polynomdivision aus, dann bekommt man
-eine ganzrationale Funktion und eine gebrochen rationale mit $m>n$, so dass
-wir uns für das Weitere auf den Fall $m>n$ beschränken können.
-
-Das Nennerpolynom kann im Komplexen vollständig in Linearfaktoren zerlegt
-werden, im Reellen bleiben ggf. quadratische Faktoren übrig, die keine reellen
-Nullstellen mehr haben. Seien nun $x_k$ die Nullstellen von $Q(x)$ mit der
-Vielfachheit $\nu_k$ dann kann man $Q(x)$ stets auf die folgende Form bringen:
-\begin{equation}
-  \label{eq:69}
-  Q(x)=b_m(x-x_1)^{\nu_1}(x-x_2)^{\nu_2}\dots(x-x_k)^{\nu_k}
-  (x^2+\alpha_1x+\beta_1)^{\mu_1}\dots(x^2+\alpha_rx+\beta_r)^{\mu_r}
-\end{equation}
-Die gebrochen rationale Funktion $f(x)$ lässt sich nun als Summe von
-Partialbrüchen schreiben. Dabei gilt:
-\begin{enumerate}
-\item Jeder Linearfaktor $(x-x_k)$ der Vielfachheit $\nu_k$ trägt zur
-  Zerlegung die folgenden Summanden bei:
-  \[
-  \frac{A_1}{(x-x_k)}+\frac{A_2}{(x-x_k)^2}+\dots
-  +\frac{A_{\nu_k}}{(x-x_k)^{\nu_k}}
-  \]
-\item Jeder quadratische Faktor mit der Vielfachheit $\mu_k$ trägt die
-  folgenden Summanden bei:
-  \[
-  \frac{C_1x+D_1}{(x^2+\alpha x+\beta)}+
-  \frac{C_2x+D_2}{(x^2+\alpha x+\beta)^2}+\dots+
-  \frac{C_{\mu_k}x+D_{\mu_k}}{(x^2+\alpha x+\beta)^{\mu_k}}
-  \]
-\end{enumerate}
-
-\noindent Die Linearfaktoren lassen sich sofort integrieren, bei den
-quadratischen geht man so vor:
-\[
-(x^2+\alpha x+\beta)=\bigl(x+\tfrac{\alpha}{2}\bigr)^2+\delta^2
-=(\delta y)^2+\delta^2=\delta^2(y^2+1)
-\]
-Hier hat man quadratisch ergänzt und $\delta\cdot y=x+\frac{\alpha}{2}$
-substituiert. Mit dieser Substitution ist
-\[
-x=\delta y-\frac{\alpha}{2}\qquad y=\frac{x+\frac{\alpha}{2}}{\delta}\qquad
-\dD x=\delta\dD y
-\]
-Nun wird das Integral zu:
-\begin{align*}
-  \int\frac{Cx+D}{(x^2+\alpha x+\beta)^\mu}\dD x
-  &=\frac{1}{\delta^{2\mu-1}}
-  \int\frac{C\delta y+D-\frac12C\alpha}{(y^2+1)^\mu}\dD y\\
-  &=\frac{C}{\delta^{2\mu-2}}\int\frac{y\dD y}{(y^2+1)^\mu}
-  +\frac{D-\frac12C\alpha}{\delta^{2\mu-1}}\int\frac{\dD y}{(y^2+1)^\mu}
-\end{align*}
-Für das erste der beiden verbleibenden Integrale bekommt man dann
-\begin{equation}
-  \label{eq:70}
-  \int\frac{y\dD y}{(y^2+1)^\mu}=\frac12\int\frac{\dD u}{u^\mu}=
-  \begin{cases}
-    \dfrac{u^{1-\mu}}{2(1-\mu)}=&\text{für~}\mu=2, 3, \dots\\
-    \frac{1}{2}\ln|u|& \text{für~} \mu=1
-  \end{cases}
-\end{equation}
-Hier hat man $u=y^2+1$ gesetzt. Nun muss noch das zweite bestimmt werden.
-\[
-J_\mu=\int\frac{\dD y}{(y^2+1)^\mu}
-\]
-Für $\mu=1$ ist es bekannt, $J_1=\arctan y$.
-
-Wir werden eine Rekursionsformel für die $J_\mu$ herleiten. Wir beginnen mit
-der Beziehung
-\[
-J_{\mu+1}=\int\frac{(y^2+1)-y^2}{(y^2+1)^{\mu+1}}\dD y
-=J_\mu-\int\frac{y^2}{(y^2+1)^{\mu+1}}\dD y
-\]
-Nun denken wir uns den zweiten Integranden als $y\cdot$Rest geschrieben und
-integrieren partiell:
-\[
-\int y\cdot\frac{y\dD y}{(y^2+1)^{\mu+1}}=
-\frac{-y}{2\mu(y^2+1)^\mu}+\frac{1}{2\mu}\int\frac{\dD y}{(y^2+1)^\mu}=
-\frac{-y}{2\mu(y^2+1)^\mu}+\frac{1}{2\mu}\,J_\mu
-\]
-Setzt man das oben ein, so bekommt man die Rekursionsformel:
-\begin{equation}
-  \label{eq:71}
-  J_{\mu+1}=\left(1-\frac{1}{2\mu}\right)J_\mu+\frac{y}{2\mu(y^2+1)^\mu}
-\end{equation}
-Insbesondere ist dann (rechne das nach!)
-\begin{align*}
-  J_1&=\arctan y\\
-  J_2&=\frac{1}{2}\arctan y+\frac{y}{2(y^2+1)}\\
-  J_3&=\frac38\left(\arctan y+\frac{y}{y^2+1}\right)+\frac{y}{4(y^2+1)^2}\\
-  J_4&=\frac{5}{16}\left(\arctan y+\frac{y}{y^2+1}\right)+
-       \frac{5}{24}\cdot\frac{y}{(y^2+1)^2}+\frac{y}{6(y^2+1)^3}
-\end{align*}
+?
 \subsubsection{Integrale von $e$-Funktionen}
 \begin{Theorem}
-  Für $f(x)=e^{l(x)}$ mit $l(x) = ax+b$ gilt:$F(x) = \dfrac{1}{a}e^{l(x)}$
+  Für $f(x)=e^{l(x)}$ mit $l(x) = ax+b$ gilt: $F(x) = \dfrac{1}{a}e^{l(x)}$
 \end{Theorem}
 \begin{Beweis}
-  Not yet... ;((
+  Man bilde $F'(x)$.
 \end{Beweis}
 \subsubsection{Integrale von $ln()$-Funktionen}
 \begin{Theorem}
@@ -492,11 +405,12 @@ Für Funktionen wie $f(x)= \dfrac{1}{\sqrt x}$ existiert kein Uneigentliches Int
 Hier eine (möglicherweise unvollständige) rückblickende Liste mit Integralen, die insbesondere zum Abitur beherrscht werden sollten.\\
 Diese sollten ohne weitere Rechtfertigung oder Beweis verwendet werden dürfen.
 \begin{align*}
-  \int x^n dx&=\frac{x^{n+1}}{n+1} + C\\
-  \int\sin x dx&= -\cos x + C\\
-  \int\cos x dx&= \sin x + C\\
-  \int\frac{ dx}{\cos^2x}&= \tan x + C\\
-  \int\frac{1}{x} dx&= \ln(|x|) + C\\
+  Warum wird das nicht angezeigt?
+  \int x^n dx &=\frac{x^{n+1}}{n+1} + C\\
+  \int\sin x dx &= -\cos x + C\\
+  \int\cos x dx &= \sin x + C\\
+  \int\frac{ dx}{\cos^2x} &= \tan x + C\\
+  \int\frac{1}{x} dx &= \ln(|x|) + C\\
   \int\frac{1}{\sqrt{x}}dx &= 2\sqrt{x} + C\\
 
 \end{align*}
