--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \usepackage{epigraph}                             %FÜrs Titelblatt
 \usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 
-%\pgfplotsset{compat=1.15}
+\pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
 
 
