--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -78,7 +78,7 @@
 
 \section{Stammfunktionen und der Hauptsatz der Differential- und Integralrechnung}
 Wir beschränken uns in diesem Kapitel auf die Integralrechnung, da die Differentialrechnung bereits in Kapitel \ref{Funktionsuntersuchung} behandelt wird.\\
-\begin{Definition}
+\begin{Theorem}
   Eine Funktion $F$ heißt Stammfunktion der Funktion $f$, wenn $F'(x)=f(x)$
   gilt.\\
   Ist $F$ irgendeine Stammfunktion von $f$, dann ist auch $F(x)+C$ (mit
@@ -86,7 +86,7 @@ Wir beschränken uns in diesem Kapitel auf die Integralrechnung, da die Differen
   konstanter Summand weg. Jede Funktion hat also unendlich viele
   Stammfunktionen, die sich aber nur um einen konstanten Summanden
   unterscheiden.
-\end{Definition}
+\end{Theorem}
 \begin{Bemerkung}
   Man beobachtet hier eine Erweiterung der NEW-Regel (siehe \ref{NEW-Regel}, NEW-Regel):\\\\
   \begin{minipage}[b]{0.2\linewidth}
@@ -103,7 +103,7 @@ Wir beschränken uns in diesem Kapitel auf die Integralrechnung, da die Differen
     \end{array}
   \end{minipage}
 \end{Bemerkung}
-\subsection{Sätze über Integrale}
+\subsection{Weitere Sätze über Integrale}
 \begin{Theorem}
 \begin{center}
   \begin{tabular}{r c l l}
