--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -359,8 +359,8 @@
 
     \paragraph{} Das Skalarprodukt ist eine ("multiplikative") Verknüpfung des Vektorraums. Seinen Namen trägt es, da es aus zwei Vektoren
     einen Skalar, alias eine Zahl macht. Es dient dazu ein Maß für den Winkel, den zwei Vektoren $\vv{u}$ und $\vv{v}$ einschließen,
-    festzulegen. Zudem lässt sich von dieser Definition aus der Winkel selber anhand der Vektoren bestimmt werden.
-    \begin{wrapfigure}[7]{r}{0.4\textwidth}
+    festzulegen. Zudem lässt sich von dieser Definition aus der Winkel selber anhand der
+    \begin{wrapfigure}[4]{r}[1cm]{0.45\textwidth}
         \definecolor{ffqqqq}{rgb}{1,0,0}
         \definecolor{qqwuqq}{rgb}{0,0.4,0}
         \definecolor{qqqqtt}{rgb}{0,0,0.2}
@@ -378,11 +378,12 @@
             \draw[color=ffqqqq] (4.6,-1.15) node {$\vv{v'}$};
         \end{tikzpicture}
     \end{wrapfigure}
+    Vektoren bestimmt werden.
     Es wird als die Multiplikation der Norm der Projektion des Vektors $\vv{v}$ in die Richtung von $\vv{u}$, das heißt, der Anteil
     von $\vv{v}$ der auf der Geraden liegt, entlang welcher $\vv{u}$ liegt, mit der Norm von $\vv{u}$ definiert. Im Klartext bedeutet das:
     \begin{align*}
         \qquad \qquad \vv{u} \odot \vv{v} &\definedBy |\vv{u}| \cdot |\vv{v'}| \\
-                            &= |\vv{u}| \cdot |\vv{v}| \cdot \cos(\alpha)
+                            &= |\vv{u}| \cdot |\vv{v}| \cdot \cos(\alpha) \\
     \end{align*}
     Daraus lässt sich ableiten, dass:
     \begin{itemize}
@@ -390,11 +391,22 @@
         \item $90 < \alpha <= 180 \text{ (stumpfer Winkel)} \logEqR \cos{\alpha} < 0 \Leftrightarrow \vv{u} \odot \vv{v} < 0 $
         \item $\alpha = 90 \text{ (rechter Winkel)} \logEqR \cos{\alpha} = 0 \Leftrightarrow \vv{u} \odot \vv{v} = 0$
     \end{itemize}
+    Da wir nun aber selten Zugriff auf den Winkel haben, und dieser in den meisten Fällen die gesuchte Variable ist, benötigen wir eine
+    praktikablere Berechnung, welche dasselbe Ergebnis liefert. Als Ansatz kann man auf eine im Abschnitt \dq Orthonormalbasis\dq\ bereits
+    besprochene Schreibweise von Vektoren zurückgreifen:
+    \begin{align*}
+        \qquad \qquad \vv{u} &= u_1 \cdot \vv{e_1} + u_2 \cdot \vv{e_2} + u_3 \cdot \vv{e_3} \\
+                      \vv{v} &= v_1 \cdot \vv{e_1} + v_2 \cdot \vv{e_2} + v_3 \cdot \vv{e_3} \\
+    \end{align*}
+    Somit erreicht man folgendes Ergebnis:
+    $\vv{u} \odot \vv{v} = (u_1 \cdot \vv{e_1} + u_2 \cdot \vv{e_2} + u_3 \cdot \vv{e_3}) \odot \vv{v} &= v_1 \cdot \vv{e_1} + v_2 \cdot \vv{e_2} + v_3 \cdot \vv{e_3}$
+    Um hiermt allerdings weiterrechnen zu können, müssen einige Rechenregeln bezüglich des Skalarprodukts aufgestellt werden. Zunächst gilt,
+    dass das Skalarprodukt symmetrisch ist: $\vv{u} \odot \vv{v} = \vv{v} \odot \vv{u}$, da
 
 
     \\
     \begin{Bemerkung}
-        Aus dieser Gleichung folgt: $\cos(\alpha) = \dfrac{\vv{v} \odot \vv{u}}{|\vv{v}| \cdot |\vv{u}|}$.
+        Aus dieser Gleichung folgt: $\cos(\alpha) = \dfrac{\vv{u} \odot \vv{v}}{|\vv{u}| \cdot |\vv{v}|}$.
     \end{Bemerkung}
 
 
