--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11p,a4paper,fleqn]{report}
+\documentclass[11p,a4paper]{report}
 
 \usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
