--- a/style.tex
+++ b/style.tex
@@ -19,8 +19,6 @@
         \vskip 50\p@
   }}
 
-% Mathe ganz links
-\setlength{\mathindent}{0pt}
 
 
 %Beweis:
@@ -109,6 +107,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\Q}{\mathbb{Q}}
 \newcommand{\zz}{\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}}}   % "zu zeigen"-Zeichen mit \zz Quelle: http://www.matheboard.de/archive/155832/thread.html
 \newcommand\danger[1][2ex]{%
   \renewcommand\stacktype{L}%
