--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -3,8 +3,8 @@
 \begin{Definition}
 Man bezeichnet als Exponentialfunktion eine Funktion der Form $x\rightarrow a^x$ mit $a\in \R^+\backslash 1$\\
 $x$ ist die Variable und wird \textit{Exponent} oder \textit{Hochzahl} genannt.\\
-$a$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion fest forgegeben.\\
-Die natürliche Exponentialfunktion wird durch die Funktionsvorschrift $f(x)=e^x$ beschrieben.
+$a$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion fest forgegeben.\\\\
+Allgemeiner gilt jede Funktion, bei der die Variable im Exponenten steht als Exponentialfunktion. 
 \end{Definition}
 
 Hier Graphen für a<1\\
@@ -36,16 +36,16 @@ Seien $a$, $b\in\R$, sowie $n$, $m\in\N$, dann gilt:
 \begin{Definition}
 $e = 2,71828182845904523536028747135266249775724709369995...$\\
 \\
-$e$ ist eine irrationale, transzendente und reelle Zahl, die die Basis des (natürlichen) Logarithmus und der (natürlichen) Exponentialfunktion ist.\\
+Die \textbf{Eulersche Zahl} ($e$) ist eine irrationale, transzendente und reelle Zahl, die die Basis des (natürlichen) Logarithmus und der (natürlichen) Exponentialfunktion ist.\\
 Die Darstellung, der man am Häufigsten begegnet ist diese:
 $e=\lim\limits_{t\to \infty}\left(1+\dfrac{1}{t}\right)^t;t\in\R$
 \end{Definition}
 \\\\
 Benannt nach dem bekannten Mathematiker Leonhard Euler ist diese Zahl eine der wichtigsten Konstanten der Mathematik.
-Sie ist die Basis des natürlichen Logarithmus und der natürlichen Exponentialfunktion. Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$-Funktion genannt.\\
+Sie ist die Basis des natürlichen Logarithmus und der natürlichen Exponentialfunktion. Diese besondere Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$-Funktion genannt, sie eignet sich zur Modellierung von Wachstums- und Zufallsprozessen.\\
 \begin{Bemerkung}
-Eine alternative Definition wäre diese:
-Die positive Zahl $a$, für die die Exponentialfunktion $f$ mit $f(x)=a^x$  mit ihrer Ableitungsfunktion $f\prime$ übereinstimmt, heißt \textbf{Eulersche Zahl}.
+Eine alternative Definition wäre folgende:
+Die positive Zahl $a$, für die die Exponentialfunktion $f$ mit $f(x)=a^x$  mit ihrer Ableitungsfunktion $f'$ übereinstimmt, heißt Eulersche Zahl. (siehe 12.4)
 \end{Bemerkung}
 \\
 \begin{Definition}
@@ -110,7 +110,7 @@ Eine streng monoton steigende Folge, die eine monoton fallende Folge, als ober S
 
 	\subsection{$e$ ist irrational}
 
-Wie schon erwähnt, handelt es sich bei der Eulerschen Zahl um eine transzendente Zahl, daraus ergibt sich, dass sie ebenfalls irrational ist. Trotzdem ist es interessant, dies zu beweisen.
+Wie schon erwähnt, handelt es sich bei der Eulerschen Zahl um eine transzendente Zahl, daraus ergibt sich schon, dass sie irrational ist. Trotzdem ist es interessant, dies zu beweisen.
 
 \begin{Beweis}
 \underline{Teil A:} unnötig\\\\
@@ -118,18 +118,18 @@ Sei $f$ eine Funktion mit $f(x)=xe^{1-x}$ mit Schaubild $\mathcal{C}$\\
 \begin{enumerate}
 \item Monotonieverhalten:\\
 \begin{align*}
-f\prime(x)&=e^{1-x}-xe^{1-x}\\
+f'(x)&=e^{1-x}-xe^{1-x}\\
 &=(1-x)\cdot e^{1-x}
 \end{align*}
 \\
 \begin{tabular}{rlcl}
-$\forall x<1$: &$f\prime(x)>0&&\Leftrightarrow f \nearrow$\\
-für $x=1$: &$f\prime(x)=0$&und VZW $+\rightarrow-&\Leftrightarrow$ Hochpunkt\\
-$\forall x>1$: &$f\prime(x)<0 &&\Leftrightarrow f \searrow$\\
+$\forall x<1$: &$f'(x)>0&&\Leftrightarrow f \nearrow$\\
+für $x=1$: &$f'(x)=0$&und VZW $+\rightarrow-&\Leftrightarrow$ Hochpunkt\\
+$\forall x>1$: &$f'(x)<0 &&\Leftrightarrow f \searrow$\\
 \end{tabular}
-\\
+\\\\
 
-Grenzwerte:\\
+Grenzwerte:
 \begin{itemize}
 \item$\lim\limits_{x\to +\infty}\underbrace{x}_{\rightarrow+\infty}\underbrace{e^{1-x}}_{\rightarrow0}=0$ (Croissance comparée)\\\\
 \item$\lim\limits_{x\to -\infty}\underbrace{x}_{\rightarrow-\infty}\underbrace{e^{1-x}}_{\rightarrow+\infty}=-\infty$\\
@@ -152,8 +152,8 @@ v'(x)&=e^{1-x}\quad & v(x)&=-e^{1-x}
 \end{alignat*}
 \end{minipage}
 \end{enumerate}
-\underline{Teil B:} $n\in\N\\\\
-Sei $I_n$ das Integral mit $I_n=\int_0^1x^ne^{1-x}\mbox{d}x$, $n\geq 1$
+\underline{Teil B:} $n\in\N$\\\\
+Sei $I_n$ das Integral mit $I_n=\int_0^1x^ne^{1-x}\mbox{d}x$, $n\geq 1$\\
 \begin{enumerate}
 \item %1
 \begin{enumerate}
@@ -172,6 +172,7 @@ J_n&=\int_0^1x^n\mbox{d}x\\
 &=\dfrac{1^{n+1}}{n+1}-\dfrac{0^{n+1}}{n+1}\\
 &=\dfrac{1}{n+1}
 \end{align*}
+\\
 \item $\zz$: $\forall n\geq1$ gilt $\dfrac{1}{n+1}\leq I_n \leq \dfrac{e}{n+1}$\\\\
 \begin{center}
 \begin{array}{ccccccl}
@@ -179,7 +180,7 @@ $&x^n&\leq& f(x)=x^ne^{1-x}&\leq& ex^n& \qquad\qquad|\int_0^1()\mbox{d}x\\\\
 \Leftrightarrow&\int_0^1 x^n\mbox{d}x &\leq& I_n &\leq& \int_0^1 ex^n\mbox{d}x&\\\\
 \Leftrightarrow&J_n &\leq& I_n &\leq& e\cdot\int_0^1x^n\mbox{d}x=e\cdot J_n&\\\\
 \Leftrightarrow&\dfrac{1}{n+1}&\leq& I_n &\leq&  \dfrac{e}{n+1}&$
-\\\\
+\\\\\\
 \end{array}
 \end{center}
 \end{enumerate}
@@ -198,7 +199,7 @@ u(x)&=x^{n+1}\quad& u\prime(x)&=(n+1)x^n\\
 v'(x)&=e^{1-x}\quad & v(x)&=-e^{1-x}
 \end{alignat*}
 \end{minipage}
- \\
+ \\\\
 \item Sei $k_n=n!e-I_n$, $n\geq1$
 \begin{enumerate}
 \item
@@ -208,6 +209,7 @@ k_{n+1}&=(n+1)!e-I_{n+1}\\
 &=(n+1)(n!e-I_n)+1\\
 &=(n+1)k_n+1
 \end{align*}
+\newpage
 \item $\zz$: $\forall n\geq1$ gilt $k_n\in\Z$:\\\\
 $\begin{array}{rl}
 \mbox{\textbf{IA}:} & \mbox{für }n=1:\quad k_1=1!e-I_1=e-(e-2)=2 \mbox{ (wahr)} \\\\
@@ -215,6 +217,7 @@ $\begin{array}{rl}
 \mbox{\textbf{IB}:} & \mbox{dann gelte für }(n+1):\quad k_{n+1}\in\Z\\\\
 \mbox{\textbf{IS}:} & k_{n+1}=\underbrace{(n+1)}_{\in\Z\text{ da }n\in\N}\underbrace{k_n}_{\in\Z\text{(IB)}}+\underbrace{1}_{\in\Z}\in\Z\\\\
 \end{array}$
+\\\\
 \item $\zz$: $\forall n\geq 2$ gilt $n!e=k_n+I_n\not\in\Z$\\\\
 Wir haben: $\dfrac{1}{n+1}\leq I_n \leq  \dfrac{e}{n+1}$\quad(1.(c))\\\\
 Und es gilt: \begin{itemize}\item$k_n\in\Z$
@@ -222,7 +225,7 @@ Und es gilt: \begin{itemize}\item$k_n\in\Z$
 				\item $\forall n\geq2:n+1\geq3\Rightarrow \dfrac{1}{n+1}\leq \dfrac{1}{3}$\\
 					und $e\leq3 \Rightarrow \dfrac{e}{n+1}\leq 1$\\
 		\end{itemize}
-$\Rightarrow\forall n\geq2:0<I_n<1\Rightarrow I_n\not\in\N\Rightarrow k_n+I_n\not\in\N\Rightarrow n!e\not\in\N$\end{enumerate}
+$\Rightarrow\forall n\geq2:0<I_n<1\Rightarrow I_n\not\in\N\Rightarrow k_n+I_n\not\in\N\Rightarrow n!e\not\in\N$\\\\\end{enumerate}
 \item Seien $p, q \in\N$\\
 Dann gilt für $n\geq q:\dfrac{n!p}{q}\in\N$\\\\
 Das stimmt weil $n!=n\cdot(n-1)\cdot...\cdot(q+1)\cdot q\cdot(q-1)\cdot...\cdot2\cdot1\Rightarrow q \text{ teilt }n!$
@@ -287,6 +290,29 @@ Es gilt weiterhin, dass sich das Wachstum der Exponentialfunktion durchsetzt, an
 
 		\section{Ableitungsregeln}
 
+Anhand der Definition des Differenzialquotienten kann man ermitteln, wie man Exponentialfunktionen ableitet.
+
+\begin{Beweis}
+$\dfrac{\text{d}}{\text{d}x}a^x =\lim\limits_{h\to0}\dfrac{a^{{x_0}+h}-a^{x_0}}{h}\\
+=\lim\limits_{h\to0}\dfrac{a^{x_0}\cdot a^h-a^{x_0}}{h}\\
+=\lim\limits_{h\to0}a^x\cdot\dfrac{a^h-1}{h}\\
+=a^x\cdot\underbrace{\lim\limits_{h\to0}\dfrac{a^h-1}{h}}_{\text{eine Konstante }\lambda}$
+\end{Beweis}
+
+So erkennen wir, dass die Ableitung einer Funktion $f$ der Form $a^x$ diese selbe Funktion mal einem konstanten Vorfaktor $\lambda$ ist: $(a^x)'=a^x\cdot\lambda$\\
+Nun versucht man, Weiteres über $\lambda$ zu erfahren: $\lambda=\lim\limits_{h\to0}\dfrac{a^h-1}{h}$ ist ein Grenzwert, der sich ausschließlich in Abhängigkeit von $a$ verändert,  ist also für jede definierte Funktion eine Konstante.\\
+Wenn man mehrere Graphen der Funktionenschar $g_a(h)=\dfrac{a^h-1}{h}$ zeichnet, erkennt man, dass es sich um stetige Funktionen handelt. Somit kann man behaupten, dass $\lim\limits_{h\to0}g_a(h)=g_a(0)$ ist, dies entspricht auch $\lambda$.\\\\
+GRAPEHN VERSCHIEDEN A AUCH E UND LAMBDA SAGEN\\\\
+Hier ist auffällig, dass wenn man $a$ so verändert, dass der y-Achsenschnittpunkt (0|1) wird, man sich immer mehr der Zahl $e$ nähert. Wenn man für $a$ genau $e$ einsetzt hat man $ g_e(0)=1$. $\lambda$ ist also $1$ für die Funktion $e^x$, was gut zeigt, dass die natürliche Exponentialfunktion ihre eigene Ableitung darstellt:
+\begin{center}$\dfrac{\text{d}}{\text{d}x}e^x=(\lim\limits_{h\to0}\dfrac{e^h-1}{h})\cdot e^x=1\cdot e^x=e^x$\end{center}\\\\
+Eine wichtige Eigenschaft ist auch, dass $f'(0)=\lambda$ ist. Dies kann man auf zwei verschiedene aber gleichermaßen einfache Arten herausfinden, beide verwenden die vorher angewendete Definition des Differenzialquotienten.\\\\
+$\begin{array}{rl}
+\text{Differentialquotient neu angewendet:}& f'(0)=\lim\limits_{h\to0}\dfrac{a^{0+h}-a^0}{h}=\lim\limits_{h\to0}\dfrac{a^h-1}{h}=\textcolor{red}{\lambda}\\
+\text{Vorheriges Ergebnis genutzt:}&f'(x)=a^x\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}\Rightarrow f'(0)=a^0\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}=1\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}=\textcolor{red}{\lambda}
+\end{array}$
+\\\\\\
+$\lambda$ entspricht also auch der Steigung der Tangenten der Ausgangsfunktion an der y-Achse. 
+
 
 \subsubsection{Exponentialfonktionen mit natürlicher Basis}
 
@@ -305,15 +331,15 @@ $$F(x)=\dfrac{1}{v'(x)}\cdot e^{v(x)}$$
 \end{Bemerkung}
 \begin{Beispiel}
 \\
-\begin{itemize}
+\begin{enumerate}
 \item$f(x)=\dfrac{2}{3} \cdot e^{-\frac{1}{2}x^2+1}\\
 \Rightarrow f'(x)= \dfrac{2}{3}\cdot(-x)\cdot e^{\frac{1}{2}x^2+1}= -\dfrac{2}{3}x\cdot e^{-\frac{1}{2}x^2+1}\\
 \Rightarrow F(x)=\dfrac{2}{3}:(-x)\cdot e^{\frac{1}{2}x^2+1}=-\dfrac{2}{3x}\cdot e^{\frac{1}{2}x^2+1}$\\
 \item$f(t)=\dfrac{\sin(tx)}{e^{tx}}\\
 \Rightarrow f'(x)=\dfrac{t\cdot\cos(tx)\cdot e^{tx}-\sin(tx)\cdot t\cdot e^{tx}}{(e^{tx})^2}=\dfrac{t\cdot e^{tx}\cdot(\cos(tx)-\sin(tx))}{(e^{tx})^2}=\dfrac{t\cdot(\cos(tx)-\sin(tx))}{e^{tx}}\\$
 \item$f(x)=x\cdot e^{t\sqrt{x}+0,5}\\
-\Rightarrow f'(x)=x\cdot (-\dfrac{t}{\sqrt{x}})\cdot e^{t\sqrt{x}+0,5}=-t\sqrt{x}\cdot e^{t\sqrt{x}+0,5}$
-\end{itemize}
+\Rightarrow f'(x)=e^{t\sqrt{x}+0,5}+x\cdot (-\dfrac{t}{\sqrt{x}})\cdot e^{t\sqrt{x}+0,5}=(1-t\sqrt{x})\cdot e^{t\sqrt{x}+0,5}$
+\end{enumerate}
 \end{Beispiel}
 
 \subsubsection{Exponentialfunktionen mit beliebiger Basis}
