--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -9,7 +9,7 @@ $\log_ba=x\Leftrightarrow b^x=a$
 
 \begin{Definition}
 Man bezeichnet als Logarithmusfunktion eine Funktion der Form $x\rightarrow \log_bx$ mit $b\in \R^+\backslash 1$\\
-$x$ ist die Variable und wird \textcolor{red}{???} genannt, Logarithmusfunktionen sind nur für positive, reelle Zahlen definiert: $x\in\R^+$\\
+$x$ ist die Variable und wird \textit{Argument} oder \textit{Numerus} genannt, Logarithmusfunktionen sind nur für positive, reelle Zahlen definiert: $x\in\R^+$\\
 $b$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion fest forgegeben.\\
 \end{Definition}
 
