--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -10,7 +10,7 @@
 
 \section{Bestimmte Integrale}
 \begin{Definition}
-  Sei $f$ eine auf einem Intervall $I$ stetige Funktion und zwei reelle Zahlen $a,b\in\I$. Die reelle Zahl,
+  Sei $f$ eine auf einem Intervall $I$ stetige Funktion und zwei reelle Zahlen $a,b\in I$. Die reelle Zahl,
   dargestellt durch  $\displaystyle{\int_a^b f(t)dt}$ und gegeben durch $F(b)-F(a)$, mit $F$ als beliebige Stammfunktion von $f$, wird bestimmtes Integral von $a$ bis $b$ von $f$ genannt.
   Eine weitere Darstellungsmöglichkeit des bestimmten Integrals sieht folgendermaßen aus:
   \begin{align*}
