Da hast du dein Beispiel für Substitution

--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 
 \pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
+\usetikzlibrary{fit}
 
 
 \nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
