--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -233,7 +233,21 @@ Eine abgespeckte Variante dieses Theorems, genannt lineare Substitution ist gege
   $$\int_a^b f(rx+s)dx=\dfrac{1}{r}[F(rx+s)]_a^b$$
 \end{Theorem}
 \begin{Beispiel}
-  Kommen noch (LS Grau S.186f)
+    Zu berechnen: $$\int_0^4 \dfrac{x\sqrt{x}}{1 + x^2\sqrt{x}} dx$$ \\
+    \textbf{Substitution}:
+    \begin{align*}
+        \quad \qquad \qquad \qquad \qquad \qquad u &= x^2\sqrt{x} \quad (\text{alternativ } u = x^2\sqrt{x} + 1) \\
+                                    \dfrac{du}{dx} &= (x^2\sqrt{x})' \\
+                                                   &= \dfrac{5}{2} \cdot x\sqrt{x} \\
+                                \Leftrightarrow dx &= \dfrac{2}{5x\sqrt{x}}du
+    \end{align*}
+    \textbf{Berechnung des Integrals}:
+    \begin{align*}
+        \int_0^4 \dfrac{x\sqrt{x}}{1 + x^2\sqrt{x}} dx &= \int_{u(0)}^{u(4)} \dfrac{\cancel{x\sqrt{x}}}{1 + u} \cdot \dfrac{2}{5\cancel{x\sqrt{x}}}du \\
+                                                       &= \dfrac{2}{5} \cdot \int_{0^2\sqrt{0}}^{4^2\sqrt{4}} \dfrac{1}{1 + u}du \\
+                                                       &= \dfrac{2}{5} \cdot \left[\ln(|1 + u|)\right]_0^{32} \\
+                                                       &\boxed{= \dfrac{2}{5} \cdot \ln(33)}
+    \end{align*}
 \end{Beispiel}
 
 \subsection{Substitution der Integrationsvariablen}
